<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
            <ImageView
                    android:id="@+id/information_fragment_ivCover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            <TextView
                    android:id="@+id/information_fragment_tvNamOfStory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    />
            <Button
                    android:id="@+id/information_fragment_btread"
                    android:text="@string/label_read"
                    android:textColor="@drawable/text_selector"
                    android:background="@color/black_transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:textAllCaps="false"
                    android:layout_centerInParent="true"
                    />
            <com.pnikosis.materialishprogress.ProgressWheel
                    xmlns:wheel="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/information_fragment_wheelCoverPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    wheel:matProg_barColor="@color/red"
                    wheel:matProg_progressIndeterminate="true"
                    />
        </RelativeLayout>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.1"
                android:background="@color/gray_21"
                android:orientation="horizontal">
            <RadioButton
                    style="@style/radio_button"
                    android:text="@string/label_information"/>
            <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>
            <RadioButton
                    style="@style/radio_button"
                    android:text="@string/label_relation"/>
            <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>
            <RadioButton
                    style="@style/radio_button"
                    android:text="@string/label_comment"/>
        </RadioGroup>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/spacing_normal">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/information_fragment_lbAuthor"
                        style="@style/TextInformation"
                        android:text="@string/label_author"
                        android:typeface="serif"/>
                <TextView
                        android:id="@+id/information_fragment_tvAuthor"
                        style="@style/TextInformation"
                        android:layout_toRightOf="@+id/information_fragment_lbAuthor"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/information_fragment_lbCountry"
                        style="@style/TextInformation"
                        android:text="@string/label_country"
                        android:typeface="serif"/>
                <TextView
                        android:id="@+id/information_fragment_tvCountry"
                        style="@style/TextInformation"
                        android:layout_toRightOf="@+id/information_fragment_lbCountry"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/information_fragment_lbCategories"
                        style="@style/TextInformation"
                        android:text="@string/label_categories"
                        android:typeface="serif"/>
                <TextView
                        android:id="@+id/information_fragment_tvCategories"
                        style="@style/TextInformation"
                        android:layout_toRightOf="@+id/information_fragment_lbCategories"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <com.pnikosis.materialishprogress.ProgressWheel
            xmlns:wheel="http://schemas.android.com/apk/res-auto"
            android:id="@+id/information_fragment_wheel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            wheel:matProg_barColor="@color/red"
            wheel:matProg_progressIndeterminate="true"
            android:visibility="gone"
            />
</RelativeLayout>